api/swim_form/src/tests/derive/form/newtype_enum_variant.stderr
error: Cannot use `newtype` annotation with enum variants
  --> src/tests/derive/form/newtype_enum_variant.rs:6:5
   |
6  | /     enum A {
7  | |         #[form(newtype)]
8  | |         B(i32),
9  | |         C,
10 | |     }
   | |_____^
