api/swim_form/src/tests/derive/form/newtype_enum_variant.rs
use swim_form_derive::*;

fn main() {
    #[derive(Form)]
    #[form_root(::swim_form)]
    enum A {
        #[form(newtype)]
        B(i32),
        C,
    }
}
